src/objects/NTM_Country__c.object
<CustomObject>
    <description>Countries and associated values that are used for New To Market</description>
    <fields>
        <fullName>Contract_Cost__c</fullName>
        <inlineHelpText>Cost to resolve a contract despute</inlineHelpText>
        <label>Contract Cost</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Distance from Major Population Centers</description>
        <label>Distance from Population Centers</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Trade_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a country has signed a free trade agreement</description>
        <label>Free Trade Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDP__c</fullName>
        <description>GDP Compounded Annual Growth Rate</description>
        <label>GDP CAGR</label>
        <precision>16</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ISO_Alpha_2__c</fullName>
        <description>ISO 3166-1 alpha-2 designation for a country</description>
        <externalId>true</externalId>
        <label>ISO Alpha-2</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Import_Costs__c</fullName>
        <description>Costs for importing goods (e.g., dock fees)</description>
        <label>Import Costs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the country is landlocked</description>
        <label>Landlocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Dari</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Pashto</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Serbian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Khmer</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logistics_Score__c</fullName>
        <description>From the World Bank, the Logistics Performance Index (LPI) uses a survey of operators on the ground working in trade. They provide feedback on the logistics friendliness of each country in which they operate and with which they trade. The 2016 LPI ranks 160 countries on six aspects of trade that are important factors when exporting to a country. These include “Customs” (how efficient is the country’s customs system), “Infrastructure” (what is the quality of the infrastructure used for trade and transportation), “International Shipments” (can competitively-priced shipments be arranged easily), “Logistics Competence” (how good are logistics services, including trucking, freight forwarding, and customs brokering), “Tracking &amp; Tracing” (how well can shipments be tracked), and “Timeliness” (do shipments reach their destinations within expected times). Scores for these six factors are compiled into an overall score, and countries are ranked by that score.</description>
        <inlineHelpText>LPI ranks 160 countries on six aspects of trade that are important factors when exporting to a country</inlineHelpText>
        <label>Logistics Performance Index Score</label>
        <precision>16</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NTMCountryNameXID__c</fullName>
        <description>This will be auto-populated from the NTM Country Name field, used for data imports.</description>
        <externalId>true</externalId>
        <label>NTM Country Name External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_Calculate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region in which this country&apos;s imports should be incorporated for calculations</description>
        <inlineHelpText>The region in which this country&apos;s imports should be incorporated for calculations</inlineHelpText>
        <label>Region (Calculate)</label>
        <referenceTo>NTM_Region__c</referenceTo>
        <relationshipLabel>Countries - Region (Calculate)</relationshipLabel>
        <relationshipName>NTM_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Compare__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The region that the country&apos;s performance should be compared to</description>
        <inlineHelpText>The region that the country&apos;s performance should be compared to</inlineHelpText>
        <label>Region (Compare)</label>
        <referenceTo>NTM_Region__c</referenceTo>
        <relationshipLabel>Countries - Region (Compare)</relationshipLabel>
        <relationshipName>NTM_Countries1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_of_Law__c</fullName>
        <description>Rule of Law Score</description>
        <label>Rule of Law</label>
        <precision>16</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <label>NTM Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NTM Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NTM Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Distance</fullName>
        <active>true</active>
        <errorConditionFormula>Distance__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Distance__c</errorDisplayField>
        <errorMessage>Distance must not be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GDP</fullName>
        <active>true</active>
        <description>GDP must be less than 100%</description>
        <errorConditionFormula>GDP__c &gt; 100</errorConditionFormula>
        <errorDisplayField>GDP__c</errorDisplayField>
        <errorMessage>GDP must be less than 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Import_Costs</fullName>
        <active>true</active>
        <errorConditionFormula>Import_Costs__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Import_Costs__c</errorDisplayField>
        <errorMessage>Import Costs must not be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LPI</fullName>
        <active>true</active>
        <description>LPI must not be negative</description>
        <errorConditionFormula>Logistics_Score__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Logistics_Score__c</errorDisplayField>
        <errorMessage>LPI Score must not be negative</errorMessage>
    </validationRules>
</CustomObject>